--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Jonathan Boyer <contact@grafikart.fr>",
   "license": "MIT",
   "scripts": {
-    "dev": "npx parcel src/index.html"
+    "dev": "npx parcel src/index.html --out-dir docs/",
+    "build": "rm -rf docs && npx parcel build src/index.html --out-dir docs/ --no-source-maps && cp technologies.json docs/technologies.json"
   },
   "devDependencies": {
     "node-sass": "^4.9.0",
