--- a/.tavis.yml
+++ b/.tavis.yml
@@ -8,7 +8,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  keep-history: true
+  keep-history: false
   local-dir: dist
   on:
     branch: gh-pages
