--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  keep-history: false
+  keep-history: true
   local-dir: dist
   on:
-    branch: gh-pages
+    branch: master
